# apps/api/src/controllers/fridge/fridge.controller.ts
@@ -4,7 +4,9 @@ import {
 	Delete,
 	Get,
 	HttpCode,
+	HttpException,
 	HttpStatus,
+	NotFoundException,
 	Param,
 	Patch,
 	Post,
@@ -43,6 +45,7 @@ import { getRecipe } from "./handlers/get.recipe";
 import { getMissingIngredients } from "./handlers/getmissing.recipe";
 import { getAllFridges } from "./handlers/getallfridges.handler";
 import { getFridgeById } from "./handlers/getfridgebyid.handler";
+import { getSuggestions } from "./handlers/llm.suggestion.handler";
 
 @ApiTags("fridges")
 @Controller()
@@ -325,6 +328,22 @@ export class FridgeController {
 	@HttpCode(HttpStatus.OK)
 	async getAllRecipes(@Req() req: any) {
 		return getAllRecipes(req.user.userId);
+	}
+
+	@Get("recipes/suggestions")
+	@UseGuards(JwtAuthGuard)
+	@ApiSecurity("x-auth")
+	@ApiOperation({
+		operationId: "getSuggestions",
+		summary: "User gets suggestions generated by an LLM",
+	})
+	@ApiResponse({
+		description: "Suggestions correctly fetched.",
+	})
+	@HttpCode(HttpStatus.OK)
+	async getSuggestions(@Req() req: any): Promise<RecipeBody[]> {
+		const res = getSuggestions(req.user.userId);
+		return res;
 	}
 
 	@Get("recipes/:recipeName")
