# packages/api-sdk/openapi.json
@@ -752,6 +752,26 @@
         ]
       }
     },
+    "/api/recipes/suggestions": {
+      "get": {
+        "operationId": "getSuggestions",
+        "parameters": [],
+        "responses": {
+          "default": {
+            "description": "Suggestions correctly fetched."
+          }
+        },
+        "security": [
+          {
+            "x-auth": []
+          }
+        ],
+        "summary": "User gets suggestions generated by an LLM",
+        "tags": [
+          "fridges"
+        ]
+      }
+    },
     "/api/recipes/missingIngredients/{recipeName}": {
       "get": {
         "operationId": "getMissingIngredients",
